INICIOS BASICOS DE SELECT E INSERT INTO

--- a/QueryProcessor/QueryProcessor.csproj
+++ b/QueryProcessor/QueryProcessor.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Parser\NewFile1.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\StoreDataManager\StoreDataManager.csproj" />
   </ItemGroup>
 
